# tack-android

./: .gitignore  README.md  build.gradle  gradle.properties  gradlew  settings.gradle
.github/workflows/: build.yml  deploy.yml
app/: build.gradle  proguard-rules.pro
app/release/: wear-release.aab
app/schemas/xyz.zedler.patrick.tack.database.SongDatabase/: 1.json  2.json  3.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: changelog-de.txt  changelog.txt
app/src/main/cpp/: CMakeLists.txt  oboe-audio-engine.cpp  oboe_audio_engine.cpp
app/src/main/res/anim/: close_enter_slide.xml  close_exit_slide.xml  fade_in_restart.xml  fade_out.xml  fade_out_restart.xml  open_enter_slide.xml  open_exit_slide.xml  tempo_term_close_enter.xml  tempo_term_close_exit.xml  tempo_term_open_enter.xml  tempo_term_open_exit.xml
app/src/main/res/animator/: close_enter.xml  close_exit.xml  open_enter.xml  open_exit.xml
app/src/main/res/animator-ldrtl/: close_exit.xml  open_enter.xml
app/src/main/res/color/: selector_button_outline_color_elevated.xml  selector_fix_surface_container.xml  selector_fix_surface_container_high.xml  selector_fix_surface_container_highest.xml  selector_fix_surface_container_low.xml  selector_fix_surface_container_lowest.xml  selector_highlight.xml  selector_highlight_bright.xml  selector_highlight_error.xml  selector_highlight_on_error.xml  selector_highlight_on_tertiary.xml  selector_highlight_static.xml  selector_highlight_tertiary.xml  selector_tonal_button_ripple.xml  (+6 more)
assets/: transifex-config.yml
fastlane/metadata/android/de/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
wear/: build.gradle  build.gradle.kts  lint.xml  proguard-rules.pro
wear/src/main/: AndroidManifest.xml
wear/src/main/assets/: changelog-de.txt  changelog.txt
wear/src/main/cpp/: oboe_audio_engine.cpp
wear2/: build.gradle.kts
wear2/src/main/: AndroidManifest.xml
(+874 files in other folders)
